installation using docker

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -16,11 +16,9 @@
 
             {%endif%}
 
-            <h4>Prediction Confidence: {{prob}}% (with optimal threshold {{thr}}%)</h4>
+            <h4>Probability estimate: {{prob}}% (with optimal threshold {{thr}}%)</h4>
 
             <br><br>
             <a href='/'>TRY AGAIN</a>
-
-
     </body>
 </html>
